[package]
name = "chatelaine"
version = "0.1.0"
authors = ["Thomas Gideon <cmdln@thecommandline.net>"]

[dependencies]
#argon2rs = "0.2"
#base64 = "0.9"
#diesel = { version = "1.0", features = ["sqlite"] }
dotenv = "0.10"
env_logger = "0.5"
futures = "0.1"
hyper = "0.11"
log = "0.4"
luminal-router = { path = "../luminal/router" }
#r2d2 = "0.8"
#r2d2-diesel = "1.0"
#rand = "0.4"
